Bug 419654 - Arrow keys do not work in default windows switcher
Summary: Arrow keys do not work in default windows switcher
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: tabbox (other bugs)
Version First Reported In: 5.18.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: junior-jobs, usability
Depends on:
Blocks:
 
Reported: 2020-04-04 23:09 UTC by n.fabritius
Modified: 2020-08-13 15:10 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description n.fabritius 2020-04-04 23:09:03 UTC
Using the arrow keys in the default windows switcher (not the task switcher) has no effect. Using the arrow keys in the task switcher (Alt+Tab) works as expected.

STEPS TO REPRODUCE
1. Press and hold Alt+`
2. Continue to hold Alt but release the ` key
3. Press arrow keys (up, down)

OBSERVED RESULT
No effect

EXPECTED RESULT
A different window in the windows switcher is selected.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Kubuntu 20.04 beta
KDE Plasma Version: 5.18.3
KDE Frameworks Version: 5.68.0
Qt Version: 5.12.5
Comment 1 Nate Graham 2020-04-15 02:42:27 UTC
Probably a matter of finding the commit that enabled this for the task switcher and doing it for the window switcher, too.
Comment 2 Gastón Haro 2020-04-30 04:59:58 UTC
Please excuse my ignorance. What is the difference between the Task Switcher vs the Window Switcher? I thought those were the same thing.
Comment 3 Gastón Haro 2020-04-30 05:03:22 UTC
Sorry, I just got what you mean. I looked through it. I couldn't figure it out yet. Though I have a feeling somewhere around tabbox/tabbox.cpp:1295 [TabBox::keyPress] lies the bug. I tried but wasn't able to test it, I only have one machine and the compiled kwin wouldn't run.
Comment 4 Bug Janitor Service 2020-08-12 18:04:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/186
Comment 5 Igor Grkavac 2020-08-13 14:45:00 UTC
Git commit 3450adf5d1225bc82a3cec6f759fcb9469038b90 by Igor Grkavac.
Committed on 12/08/2020 at 17:56.
Pushed by davidedmundson into branch 'master'.

[tabbox] Fix for Window Switcher

Loop thought the list of modes twice to complete the logic.

M  +1    -1    tabbox/tabbox.cpp

https://invent.kde.org/plasma/kwin/commit/3450adf5d1225bc82a3cec6f759fcb9469038b90