[tabbox] Fix for Window Switcher

Loop thought the list of modes twice to complete the logic.

BUG: 419654